--- a/src/SleekFlow.ToDo.WebApi/appsettings.json
+++ b/src/SleekFlow.ToDo.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ToDo": "Data Source=ToDo.sqlite"
+  }
 }
