--- a/src/SleekFlow.ToDo.WebApi/SleekFlow.ToDo.WebApi.csproj
+++ b/src/SleekFlow.ToDo.WebApi/SleekFlow.ToDo.WebApi.csproj
@@ -6,6 +6,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\net6.0\SleekFlow.ToDo.WebApi.xml</DocumentationFile>
+      <NoWarn>1591,1701;1702</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\net6.0\SleekFlow.ToDo.WebApi.xml</DocumentationFile>
+      <NoWarn>1591,1701;1702</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Dapper" Version="2.0.123" />
